--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        
 
         <button onclick="compute()">Compute Interest</button><br/>
-         Interesttt: <span id="result"></span><br/>
+         Interest: <span id="result"></span><br/>
         </div>
         <footer>&#169; This Calculator belongs to Togo</footer>
     </body>
