--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
        
 
         <button onclick="compute()">Compute Interest</button><br/>
-         Interest: <span id="result"></span><br/>
+         Interest: <span id="result">
+            <script>
+                document.getElementById("result").innerHTML="If you deposit "+principal+",\<br\>at an interest rate of "+rate+"%\<br\>You will receive an amount of "+amount+",\<br\>in the year "+year+"\<br\>";
+            </script>
+            </span><br/>
         </div>
         <footer>&#169; This Calculator belongs to Togo</footer>
     </body>
