--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <button onclick="compute()">Compute Interest</button><br/>
         <span id="result"></span>
         </div>
-        <footer>&#169; This Calculator belongs to togo</footer>
+        <footer>&#169; This Calculator belongs to Togo</footer>
     </body>
 </html>
